// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FlagIcons Icons > should ensure the export names have not changed unexpectedly 1`] = `
[
  "flagAd",
  "flagAe",
  "flagAf",
  "flagAg",
  "flagAi",
  "flagAl",
  "flagAm",
  "flagAo",
  "flagAq",
  "flagAr",
  "flagArab",
  "flagAs",
  "flagAsean",
  "flagAt",
  "flagAu",
  "flagAw",
  "flagAx",
  "flagAz",
  "flagBa",
  "flagBb",
  "flagBd",
  "flagBe",
  "flagBf",
  "flagBg",
  "flagBh",
  "flagBi",
  "flagBj",
  "flagBl",
  "flagBm",
  "flagBn",
  "flagBo",
  "flagBq",
  "flagBr",
  "flagBs",
  "flagBt",
  "flagBv",
  "flagBw",
  "flagBy",
  "flagBz",
  "flagCa",
  "flagCc",
  "flagCd",
  "flagCefta",
  "flagCf",
  "flagCg",
  "flagCh",
  "flagCi",
  "flagCk",
  "flagCl",
  "flagCm",
  "flagCn",
  "flagCo",
  "flagCp",
  "flagCr",
  "flagCu",
  "flagCv",
  "flagCw",
  "flagCx",
  "flagCy",
  "flagCz",
  "flagDe",
  "flagDg",
  "flagDj",
  "flagDk",
  "flagDm",
  "flagDo",
  "flagDz",
  "flagEac",
  "flagEc",
  "flagEe",
  "flagEg",
  "flagEh",
  "flagEr",
  "flagEsCt",
  "flagEsGa",
  "flagEsPv",
  "flagEs",
  "flagEt",
  "flagEu",
  "flagFi",
  "flagFj",
  "flagFk",
  "flagFm",
  "flagFo",
  "flagFr",
  "flagGa",
  "flagGbEng",
  "flagGbNir",
  "flagGbSct",
  "flagGbWls",
  "flagGb",
  "flagGd",
  "flagGe",
  "flagGf",
  "flagGg",
  "flagGh",
  "flagGi",
  "flagGl",
  "flagGm",
  "flagGn",
  "flagGp",
  "flagGq",
  "flagGr",
  "flagGs",
  "flagGt",
  "flagGu",
  "flagGw",
  "flagGy",
  "flagHk",
  "flagHm",
  "flagHn",
  "flagHr",
  "flagHt",
  "flagHu",
  "flagIc",
  "flagId",
  "flagIe",
  "flagIl",
  "flagIm",
  "flagIn",
  "flagIo",
  "flagIq",
  "flagIr",
  "flagIs",
  "flagIt",
  "flagJe",
  "flagJm",
  "flagJo",
  "flagJp",
  "flagKe",
  "flagKg",
  "flagKh",
  "flagKi",
  "flagKm",
  "flagKn",
  "flagKp",
  "flagKr",
  "flagKw",
  "flagKy",
  "flagKz",
  "flagLa",
  "flagLb",
  "flagLc",
  "flagLi",
  "flagLk",
  "flagLr",
  "flagLs",
  "flagLt",
  "flagLu",
  "flagLv",
  "flagLy",
  "flagMa",
  "flagMc",
  "flagMd",
  "flagMe",
  "flagMf",
  "flagMg",
  "flagMh",
  "flagMk",
  "flagMl",
  "flagMm",
  "flagMn",
  "flagMo",
  "flagMp",
  "flagMq",
  "flagMr",
  "flagMs",
  "flagMt",
  "flagMu",
  "flagMv",
  "flagMw",
  "flagMx",
  "flagMy",
  "flagMz",
  "flagNa",
  "flagNc",
  "flagNe",
  "flagNf",
  "flagNg",
  "flagNi",
  "flagNl",
  "flagNo",
  "flagNp",
  "flagNr",
  "flagNu",
  "flagNz",
  "flagOm",
  "flagPa",
  "flagPc",
  "flagPe",
  "flagPf",
  "flagPg",
  "flagPh",
  "flagPk",
  "flagPl",
  "flagPm",
  "flagPn",
  "flagPr",
  "flagPs",
  "flagPt",
  "flagPw",
  "flagPy",
  "flagQa",
  "flagRe",
  "flagRo",
  "flagRs",
  "flagRu",
  "flagRw",
  "flagSa",
  "flagSb",
  "flagSc",
  "flagSd",
  "flagSe",
  "flagSg",
  "flagShAc",
  "flagShHl",
  "flagShTa",
  "flagSh",
  "flagSi",
  "flagSj",
  "flagSk",
  "flagSl",
  "flagSm",
  "flagSn",
  "flagSo",
  "flagSr",
  "flagSs",
  "flagSt",
  "flagSv",
  "flagSx",
  "flagSy",
  "flagSz",
  "flagTc",
  "flagTd",
  "flagTf",
  "flagTg",
  "flagTh",
  "flagTj",
  "flagTk",
  "flagTl",
  "flagTm",
  "flagTn",
  "flagTo",
  "flagTr",
  "flagTt",
  "flagTv",
  "flagTw",
  "flagTz",
  "flagUa",
  "flagUg",
  "flagUm",
  "flagUn",
  "flagUs",
  "flagUy",
  "flagUz",
  "flagVa",
  "flagVc",
  "flagVe",
  "flagVg",
  "flagVi",
  "flagVn",
  "flagVu",
  "flagWf",
  "flagWs",
  "flagXk",
  "flagXx",
  "flagYe",
  "flagYt",
  "flagZa",
  "flagZm",
  "flagZw",
]
`;

exports[`FlagIcons Icons should ensure the export names have not changed unexpectedly 1`] = `
Array [
  "flagAd",
  "flagAe",
  "flagAf",
  "flagAg",
  "flagAi",
  "flagAl",
  "flagAm",
  "flagAo",
  "flagAq",
  "flagAr",
  "flagArab",
  "flagAs",
  "flagAsean",
  "flagAt",
  "flagAu",
  "flagAw",
  "flagAx",
  "flagAz",
  "flagBa",
  "flagBb",
  "flagBd",
  "flagBe",
  "flagBf",
  "flagBg",
  "flagBh",
  "flagBi",
  "flagBj",
  "flagBl",
  "flagBm",
  "flagBn",
  "flagBo",
  "flagBq",
  "flagBr",
  "flagBs",
  "flagBt",
  "flagBv",
  "flagBw",
  "flagBy",
  "flagBz",
  "flagCa",
  "flagCc",
  "flagCd",
  "flagCefta",
  "flagCf",
  "flagCg",
  "flagCh",
  "flagCi",
  "flagCk",
  "flagCl",
  "flagCm",
  "flagCn",
  "flagCo",
  "flagCp",
  "flagCr",
  "flagCu",
  "flagCv",
  "flagCw",
  "flagCx",
  "flagCy",
  "flagCz",
  "flagDe",
  "flagDg",
  "flagDj",
  "flagDk",
  "flagDm",
  "flagDo",
  "flagDz",
  "flagEac",
  "flagEc",
  "flagEe",
  "flagEg",
  "flagEh",
  "flagEr",
  "flagEsCt",
  "flagEsGa",
  "flagEsPv",
  "flagEs",
  "flagEt",
  "flagEu",
  "flagFi",
  "flagFj",
  "flagFk",
  "flagFm",
  "flagFo",
  "flagFr",
  "flagGa",
  "flagGbEng",
  "flagGbNir",
  "flagGbSct",
  "flagGbWls",
  "flagGb",
  "flagGd",
  "flagGe",
  "flagGf",
  "flagGg",
  "flagGh",
  "flagGi",
  "flagGl",
  "flagGm",
  "flagGn",
  "flagGp",
  "flagGq",
  "flagGr",
  "flagGs",
  "flagGt",
  "flagGu",
  "flagGw",
  "flagGy",
  "flagHk",
  "flagHm",
  "flagHn",
  "flagHr",
  "flagHt",
  "flagHu",
  "flagIc",
  "flagId",
  "flagIe",
  "flagIl",
  "flagIm",
  "flagIn",
  "flagIo",
  "flagIq",
  "flagIr",
  "flagIs",
  "flagIt",
  "flagJe",
  "flagJm",
  "flagJo",
  "flagJp",
  "flagKe",
  "flagKg",
  "flagKh",
  "flagKi",
  "flagKm",
  "flagKn",
  "flagKp",
  "flagKr",
  "flagKw",
  "flagKy",
  "flagKz",
  "flagLa",
  "flagLb",
  "flagLc",
  "flagLi",
  "flagLk",
  "flagLr",
  "flagLs",
  "flagLt",
  "flagLu",
  "flagLv",
  "flagLy",
  "flagMa",
  "flagMc",
  "flagMd",
  "flagMe",
  "flagMf",
  "flagMg",
  "flagMh",
  "flagMk",
  "flagMl",
  "flagMm",
  "flagMn",
  "flagMo",
  "flagMp",
  "flagMq",
  "flagMr",
  "flagMs",
  "flagMt",
  "flagMu",
  "flagMv",
  "flagMw",
  "flagMx",
  "flagMy",
  "flagMz",
  "flagNa",
  "flagNc",
  "flagNe",
  "flagNf",
  "flagNg",
  "flagNi",
  "flagNl",
  "flagNo",
  "flagNp",
  "flagNr",
  "flagNu",
  "flagNz",
  "flagOm",
  "flagPa",
  "flagPc",
  "flagPe",
  "flagPf",
  "flagPg",
  "flagPh",
  "flagPk",
  "flagPl",
  "flagPm",
  "flagPn",
  "flagPr",
  "flagPs",
  "flagPt",
  "flagPw",
  "flagPy",
  "flagQa",
  "flagRe",
  "flagRo",
  "flagRs",
  "flagRu",
  "flagRw",
  "flagSa",
  "flagSb",
  "flagSc",
  "flagSd",
  "flagSe",
  "flagSg",
  "flagShAc",
  "flagShHl",
  "flagShTa",
  "flagSh",
  "flagSi",
  "flagSj",
  "flagSk",
  "flagSl",
  "flagSm",
  "flagSn",
  "flagSo",
  "flagSr",
  "flagSs",
  "flagSt",
  "flagSv",
  "flagSx",
  "flagSy",
  "flagSz",
  "flagTc",
  "flagTd",
  "flagTf",
  "flagTg",
  "flagTh",
  "flagTj",
  "flagTk",
  "flagTl",
  "flagTm",
  "flagTn",
  "flagTo",
  "flagTr",
  "flagTt",
  "flagTv",
  "flagTw",
  "flagTz",
  "flagUa",
  "flagUg",
  "flagUm",
  "flagUn",
  "flagUs",
  "flagUy",
  "flagUz",
  "flagVa",
  "flagVc",
  "flagVe",
  "flagVg",
  "flagVi",
  "flagVn",
  "flagVu",
  "flagWf",
  "flagWs",
  "flagXk",
  "flagXx",
  "flagYe",
  "flagYt",
  "flagZa",
  "flagZm",
  "flagZw",
]
`;
